--- a/frontend/src/app/contact/contact.component.html
+++ b/frontend/src/app/contact/contact.component.html
@@ -1,3 +1,21 @@
-<p>
-  contact works!
-</p>
+<div class="container">
+  <h1>Contact List</h1>
+  <table class="table">
+    <thead>
+    <tr>
+      <th>Name</th>
+      <th>City</th>
+      <th>Email</th>
+      <th>Action</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let contact of contacts">
+      <td>{{ contact.title }}</td>
+      <td>{{ contact.city }}</td>
+      <td>{{ contact.email }}</td>
+      <td>Show Detail</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
