#14 - Set contact-details component - Angular Frontend

--- a/frontend/src/app/contact-detail/contact-detail.component.html
+++ b/frontend/src/app/contact-detail/contact-detail.component.html
@@ -1,3 +1,13 @@
-<p>
-  contact-detail works!
-</p>
+<div class="container">
+  <h1>{{ contact.name }}</h1>
+  <dl class="list">
+    <dt>Address</dt>
+    <dd>{{ contact.address }}</dd>
+    <dt>City</dt>
+    <dd>{{ contact.city }}</dd>
+    <dt>Phone</dt>
+    <dd>{{ contact.phone }}</dd>
+    <dt>Email</dt>
+    <dd>{{ contact.email }}</dd>
+  </dl>
+</div>
