#16 - Set contact-create component - Angular Frontend

--- a/frontend/src/app/contact/contact.component.html
+++ b/frontend/src/app/contact/contact.component.html
@@ -1,5 +1,8 @@
 <div class="container">
   <h1>Contact List</h1>
+  <a [routerLink]="['/contact-create']" class="btn btn-default btn-lg">
+    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+  </a>
   <table class="table">
     <thead>
     <tr>
