#18 - Set contact-edit component - Angular Frontend

--- a/frontend/src/app/contact-detail/contact-detail.component.html
+++ b/frontend/src/app/contact-detail/contact-detail.component.html
@@ -11,3 +11,8 @@
     <dd>{{ contact.email }}</dd>
   </dl>
 </div>
+<div class="row">
+  <div class="col-md-12">
+    <a [routerLink]="['/contact-edit', contact.id]" class="btn btn-success">EDIT</a>
+  </div>
+</div>
