--- a/frontend/src/app/contact-edit/contact-edit.component.html
+++ b/frontend/src/app/contact-edit/contact-edit.component.html
@@ -1,3 +1,32 @@
-<p>
-  contact-edit works!
-</p>
+<div class="container">
+  <h1>Edit Contact</h1>
+  <div class="row">
+    <div class="col-md-6">
+      <form (ngSubmit)="updateContact(contact.id)" #contactForm="ngForm">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input type="text" class="form-control" [(ngModel)]="contact.name" name="name" required>
+        </div>
+        <div class="form-group">
+          <label for="name">Address</label>
+          <input type="text" class="form-control" [(ngModel)]="contact.address" name="address" required>
+        </div>
+        <div class="form-group">
+          <label for="name">City</label>
+          <input type="text" class="form-control" [(ngModel)]="contact.city" name="city" required>
+        </div>
+        <div class="form-group">
+          <label for="name">Phone</label>
+          <input type="phone" class="form-control" [(ngModel)]="contact.phone" name="phone" required>
+        </div>
+        <div class="form-group">
+          <label for="name">Email</label>
+          <input type="email" class="form-control" [(ngModel)]="contact.email" name="email" required>
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-success" [disabled]="!contactForm.form.valid">Update</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
