#19 - Still error in contact-edit component - Angular Frontend

--- a/frontend/src/app/contact-detail/contact-detail.component.html
+++ b/frontend/src/app/contact-detail/contact-detail.component.html
@@ -15,4 +15,8 @@
   <div class="col-md-12">
     <a [routerLink]="['/contact-edit', contact.id]" class="btn btn-success">EDIT</a>
   </div>
+  <div class="col-md-12">
+    <a [routerLink]="['/contact-edit', contact.id]" class="btn btn-success">EDIT</a>
+    <button class="btn btn-danger" type="button" (click)="deleteContact(contact.id)">DELETE</button>
+  </div>
 </div>
