--- a/frontend/src/app/contact/contact.component.html
+++ b/frontend/src/app/contact/contact.component.html
@@ -14,6 +14,7 @@
     </thead>
     <tbody>
     <tr *ngFor="let contact of contacts">
+      <td>{{ contact.name }}</td>
       <td>{{ contact.title }}</td>
       <td>{{ contact.city }}</td>
       <td>{{ contact.email }}</td>
